<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Chronos</string>
    <string name="action_settings">Settings</string>
    <string name="listeAthlete"><u>Liste des athletes :</u></string>
    <string name="btAjouterAthlete">Ajouter</string>
    <string name="nomAthlete">Nom</string>
    <string name="prenomAthlete">Prenom</string>
    <string name="tps_chrono">Tps chrono</string>
    <string name="Chronometre">Chronometre</string>
    <string name="Stop">Arrêter</string>
    <string name="Start">Démarrer</string>
    <string name="ImageDesc">Image</string>
    <string name="tps">Temps : </string>
    <string name="metre">mètres</string>
    <string name="title_activity_activity_waiting">ActivityWaiting</string>
    <string name="hello_world">Hello world!</string>
    <string name="Exporter">Exporter</string>
    <string name="Fonctions"><u>Fonctions avancées :</u></string>
    <string name="synchronisation">Synchronisation</string>
    <string name="connexion_d_part">Connexion départ</string>
    <string name="connexion_arriv_e">Connexion arrivée</string>
    <string name="Synchronisation">Synchronisation</string>

</resources>
