<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <Chronometer
        android:id="@+id/chronometer"
        android:layout_width="94dp"
        android:layout_height="wrap_content"
        android:layout_margin="100dp"
        android:background="@drawable/backgroundlistview"
        android:padding="5dp"
        android:text="@string/Chronometre"
        android:textSize="30sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btStart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="45dp"
            android:text="@string/Start" />

        <Button
            android:id="@+id/btStop"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="45dp"
            android:layout_weight="0.07"
            android:text="@string/Stop" />
    </LinearLayout>

</LinearLayout>