<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/athle"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityListAthlete" >

    <TextView
        android:id="@+id/textViewListeAthlete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listeAthlete"
        android:textSize="20sp" />

    <ExpandableListView
        android:id="@+id/listAthleteExpandable"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"  
        android:orientation="vertical"
        android:layout_above="@+id/tempsChrono"
        android:layout_below="@+id/textViewListeAthlete"
        android:layout_marginTop="28dp"
        android:layout_toLeftOf="@+id/bouttonAddAthlete"
        android:background="@drawable/backgroundlistview"
        android:textSize="12sp"   >
        

    </ExpandableListView>

    <TextView
        android:id="@+id/tempsChrono"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="26dp"
        android:text="@string/tps_chrono"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="18sp" />

    <Button
        android:id="@+id/bouttonAddAthlete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextNom"
        android:layout_alignRight="@+id/editTextNom"
        android:layout_alignTop="@+id/listAthleteExpandable"
        android:text="@string/btAjouterAthlete" />

    <EditText
        android:id="@+id/editTextPrenom"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextNom"
        android:layout_alignRight="@+id/editTextNom"
        android:layout_below="@+id/editTextNom"
        android:hint="@string/prenomAthlete"
        android:layout_marginTop="22dp"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/TextView01"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/tempsChrono"
        android:layout_alignBottom="@+id/tempsChrono"
        android:layout_alignLeft="@+id/listAthleteExpandable"
        android:text="@string/tps"
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/editTextNom"
        android:layout_width="167dp"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/bouttonAddAthlete"
        android:layout_toRightOf="@+id/tempsChrono"
        android:hint="@string/nomAthlete"
        android:ems="10"
        android:inputType="textPersonName" >
        <requestFocus />
    </EditText>

    <ImageView
        android:id="@+id/settings"
        android:layout_width="55dp"
        android:layout_height="55dp"
        android:layout_above="@+id/TextView01"
        android:layout_alignRight="@+id/editTextPrenom"
        android:contentDescription="@string/app_name"
        android:maxHeight="35dp"
        android:maxWidth="35dp"
        android:src="@drawable/settings" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/editTextPrenom"
        android:layout_below="@+id/editTextPrenom"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="20dp"
        android:text="Distance d&apos;enregistrement : (100m)"
        android:textAppearance="?android:attr/textAppearanceSmall"
        tools:ignore="HardcodedText" />

</RelativeLayout>