<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".ActivityListeAthlete" >

    <TextView
        android:id="@+id/textViewListeAthlete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/listeAthlete"
        android:textSize="20sp" />

    <Button
        android:id="@+id/bouttonAddAthlete"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/textViewListeAthlete"
        android:layout_marginRight="22dp"
        android:layout_marginTop="42dp"
        android:text="@string/btAjouterAthlete" />

    <ListView
        android:id="@+id/listAthlete"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"  
        android:orientation="vertical"
        android:layout_above="@+id/textView1"
        android:layout_below="@+id/textViewListeAthlete"
        android:layout_marginTop="28dp"
        android:layout_toLeftOf="@+id/bouttonAddAthlete"
        tools:listitem="@android:layout/simple_list_item_single_choice" >

    </ListView>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="36dp"
        android:text="@string/tps_chrono" 
        android:textAppearance="?android:attr/textAppearanceLarge"
        android:textSize="35sp" />

</RelativeLayout>